--- a/.editorconfig
+++ b/.editorconfig
@@ -292,3 +292,8 @@ indent_size = 2
 end_of_line = lf
 [*.{cmd,bat}]
 end_of_line = crlf
+
+# YAML files
+[*.{yml,yaml}]
+indent_size = 2
+end_of_line = lf
