publish-packages.yml now uses curl push

--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -17,17 +17,6 @@ jobs:
      matrix:
        runtime: [linux-x64, linux-arm64]
    steps:
-     - name: Download and unpack buildkite CLI # ugly, but the only way for now
-       run: |
-         curl -s https://api.github.com/repos/buildkite/cli/releases/latest \
-         | grep "browser_download_url.*amd64.tar.gz" \
-         | cut -d : -f 2,3 \
-         | tr -d \" \
-         | wget -i - -O - \
-         | tar -xz \
-         && mv bk_*/bk . \
-         && rm bk_* -rfd
-
      - name: Download package artifacts
        uses: actions/download-artifact@v4
        with:
@@ -36,14 +25,18 @@ jobs:
 
      - name: Publish DEB package
        env:
-         PACKAGECLOUD_TOKEN: ${{ secrets.PACKAGECLOUD_TOKEN }}
+         BUILDKITE_TOKEN: ${{ secrets.BUILDKITE_TOKEN }}
        run: |
+         FILE=$(echo *.deb)
          curl -X POST https://api.buildkite.com/v2/packages/organizations/stone-w4tch3r/registries/sourcegit-fork-test-deb/packages \
-           -H "Authorization: Bearer $PACKAGECLOUD_TOKEN" \
-           -F "file=build/sourcegit-0.0.1-1.x86_64.rpm"
+           -H "Authorization: Bearer $BUILDKITE_TOKEN" \
+           -F "file=@$FILE"
 
      - name: Publish RPM package
        env:
-         PACKAGECLOUD_TOKEN: ${{ secrets.PACKAGECLOUD_TOKEN }}
+         BUILDKITE_TOKEN: ${{ secrets.BUILDKITE_TOKEN }}
        run: |
-         package_cloud push stone-w4tch3r/sourcegit-fork-test-rpm/rpm_any/rpm_any packages/*.rpm
+         FILE=$(echo *.rpm)
+         curl -X POST https://api.buildkite.com/v2/packages/organizations/stone-w4tch3r/registries/sourcegit-fork-test-rpm/packages \
+           -H "Authorization: Bearer $BUILDKITE_TOKEN" \
+           -F "file=@$FILE"
