Add debug logs to publish-packages.yml

--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -28,6 +28,7 @@ jobs:
          BUILDKITE_TOKEN: ${{ secrets.BUILDKITE_TOKEN }}
        run: |
          FILE=$(echo *.deb)
+         echo $FILE
          curl -X POST https://api.buildkite.com/v2/packages/organizations/stone-w4tch3r/registries/sourcegit-fork-test-deb/packages \
            -H "Authorization: Bearer $BUILDKITE_TOKEN" \
            -F "file=@$FILE"
