--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -25,7 +25,8 @@ jobs:
          FILE=$(echo packages/*.deb)
          curl -X POST https://api.buildkite.com/v2/packages/organizations/sourcegit/registries/sourcegit-deb/packages \
            -H "Authorization: Bearer $BUILDKITE_TOKEN" \
-           -F "file=@$FILE"
+           -F "file=@$FILE" \
+           --fail
 
      - name: Publish RPM package
        env:
@@ -34,4 +35,5 @@ jobs:
          FILE=$(echo packages/*.rpm)
          curl -X POST https://api.buildkite.com/v2/packages/organizations/sourcegit/registries/sourcegit-rpm/packages \
            -H "Authorization: Bearer $BUILDKITE_TOKEN" \
-           -F "file=@$FILE"
+           -F "file=@$FILE" \
+           --fail
