feature: use `-p:DisableUpdateDetection=true` to disable built-in update detection feature (#819)

--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -26,6 +26,10 @@
     <TrimMode>link</TrimMode>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(DisableUpdateDetection)' == 'true'">
+    <DefineConstants>$(DefineConstants);DISABLE_UPDATE_DETECTION</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <AvaloniaResource Include="App.ico" />
     <AvaloniaResource Include="Resources/Fonts/*" />
