--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -69,6 +69,7 @@ jobs:
   linux:
     name: Package Linux
     runs-on: ubuntu-latest
+    container: ubuntu:20.04
     strategy:
       matrix:
         runtime: [linux-x64, linux-arm64]
@@ -77,9 +78,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Download package dependencies
         run: |
-          sudo add-apt-repository universe
-          sudo apt-get update
-          sudo apt-get install desktop-file-utils rpm libfuse2
+          export DEBIAN_FRONTEND=noninteractive
+          ln -fs /usr/share/zoneinfo/Etc/UTC /etc/localtime
+          apt-get update
+          apt-get install -y curl wget git dpkg-dev fakeroot tzdata zip unzip desktop-file-utils rpm libfuse2 file build-essential binutils
       - name: Download build
         uses: actions/download-artifact@v4
         with:
@@ -89,6 +91,7 @@ jobs:
         env:
           VERSION: ${{ inputs.version }}
           RUNTIME: ${{ matrix.runtime }}
+          APPIMAGE_EXTRACT_AND_RUN: 1
         run: |
           mkdir build/SourceGit
           tar -xf "build/sourcegit.${{ matrix.runtime }}.tar" -C build/SourceGit
