--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -9,10 +9,10 @@ on:
 jobs:
   windows:
     name: Package Windows
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
     strategy:
       matrix:
-        runtime: [win-x64, win-arm64]
+        runtime: [ win-x64, win-arm64 ]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -22,6 +22,7 @@ jobs:
           name: sourcegit.${{ matrix.runtime }}
           path: build/SourceGit
       - name: Package
+        shell: bash
         env:
           VERSION: ${{ inputs.version }}
           RUNTIME: ${{ matrix.runtime }}
