--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -50,6 +50,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-rc5.4" />
     <PackageReference Include="OpenAI" Version="2.2.0-beta.4" />
+    <PackageReference Include="Pfim" Version="0.11.3" />
     <PackageReference Include="TextMateSharp" Version="1.0.66" />
     <PackageReference Include="TextMateSharp.Grammars" Version="1.0.66" />
   </ItemGroup>
