--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -47,6 +47,7 @@
     <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.2.0" />
     <PackageReference Include="AvaloniaEdit.TextMate" Version="11.2.0" />
     <PackageReference Include="Azure.AI.OpenAI" Version="2.2.0-beta.4" />
+    <PackageReference Include="BitMiracle.LibTiff.NET" Version="2.4.660" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-rc5.4" />
     <PackageReference Include="OpenAI" Version="2.2.0-beta.4" />
