code_style: general cleanup

--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -1,7 +1,9 @@
 name: Format Check
 on:
   push:
-    branches: [ develop ]
+    branches: [develop]
+  pull_request:
+    branches: [develop]
   workflow_dispatch:
   workflow_call:
 
