--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -47,14 +47,14 @@
     <PackageReference Include="Avalonia.Diagnostics" Version="11.2.8" Condition="'$(Configuration)' == 'Debug'" />
     <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.2.0" />
     <PackageReference Include="AvaloniaEdit.TextMate" Version="11.2.0" />
-    <PackageReference Include="Azure.AI.OpenAI" Version="2.2.0-beta.4" />
+    <PackageReference Include="Azure.AI.OpenAI" Version="2.2.0-beta.5" />
     <PackageReference Include="BitMiracle.LibTiff.NET" Version="2.4.660" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-rc5.4" />
-    <PackageReference Include="OpenAI" Version="2.2.0-beta.4" />
+    <PackageReference Include="OpenAI" Version="2.3.0" />
     <PackageReference Include="Pfim" Version="0.11.3" />
-    <PackageReference Include="TextMateSharp" Version="1.0.66" />
-    <PackageReference Include="TextMateSharp.Grammars" Version="1.0.66" />
+    <PackageReference Include="TextMateSharp" Version="1.0.70" />
+    <PackageReference Include="TextMateSharp.Grammars" Version="1.0.70" />
   </ItemGroup>
 
   <ItemGroup>
